--- a/test_2.html
+++ b/test_2.html
@@ -65,19 +65,13 @@
       <div class="section-content"> 
         <ul>
           <li><a href="#" target="_blank" class="thumbnail"> <img src="http://lorempixel.com/100/100/food/" alt="Image1" width="90" height="90"></a><a href="#" target="_blank" class="product-link"><span class="product-name">Product 1</span></a>
-            <div class="product-price">
-              <p>$19.99</p>
-            </div>
+            <div class="product-price">$19.99</div>
           </li>
           <li><a href="#" target="_blank" class="thumbnail"> <img src="http://lorempixel.com/100/100/food/" alt="Image2" width="90" height="90"></a><a href="#" target="_blank" class="product-link"><span class="product-name">Product 2</span></a>
-            <div class="product-price">
-              <p>$29.99</p>
-            </div>
+            <div class="product-price">$29.99</div>
           </li>
           <li><a href="#" target="_blank" class="thumbnail"> <img src="http://lorempixel.com/100/100/food/" alt="Image3" width="90" height="90"></a><a href="#" target="_blank" class="product-link"><span class="product-name">Product 3 </span></a>
-            <div class="product-price">
-              <p>$22.99      </p>
-            </div>
+            <div class="product-price">$22.99      </div>
           </li>
         </ul>
       </div>
@@ -91,34 +85,22 @@
       <div class="section-content"> 
         <ul>
           <li><a href="#" target="_blank" class="thumbnail"> <img src="http://lorempixel.com/100/100/food/" alt="Image1" width="90" height="90"></a><a href="#" target="_blank" class="product-link"><span class="product-name">Product 1</span></a>
-            <div class="product-price">
-              <p>$19.99</p>
-            </div>
+            <div class="product-price">$19.99</div>
           </li>
           <li><a href="#" target="_blank" class="thumbnail"> <img src="http://lorempixel.com/100/100/food/" alt="Image2" width="90" height="90"></a><a href="#" target="_blank" class="product-link"><span class="product-name">Product 2</span></a>
-            <div class="product-price">
-              <p>$29.99</p>
-            </div>
+            <div class="product-price">$29.99</div>
           </li>
           <li><a href="#" target="_blank" class="thumbnail"> <img src="http://lorempixel.com/100/100/food/" alt="Image3" width="90" height="90"></a><a href="#" target="_blank" class="product-link"><span class="product-name">Product 3 </span></a>
-            <div class="product-price">
-              <p>$22.99      </p>
-            </div>
+            <div class="product-price">$22.99      </div>
           </li>
           <li><a href="#" target="_blank" class="thumbnail"> <img src="http://lorempixel.com/100/100/food/" alt="Image4" width="90" height="90"></a><a href="#" target="_blank" class="product-link"><span class="product-name">Product 4</span></a>
-            <div class="product-price">
-              <p>$32.99</p>
-            </div>
+            <div class="product-price">$32.99</div>
           </li>
           <li><a href="#" target="_blank" class="thumbnail"> <img src="http://lorempixel.com/100/100/food/" alt="Image5" width="90" height="90"></a><a href="#" target="_blank" class="product-link"><span class="product-name">Product 5</span></a>
-            <div class="product-price">
-              <p>$15.99</p>
-            </div>
+            <div class="product-price">$15.99</div>
           </li>
           <li><a href="#" target="_blank" class="thumbnail"> <img src="http://lorempixel.com/100/100/food/" alt="Image6" width="90" height="90"></a><a href="#" target="_blank" class="product-link"><span class="product-name">Product 6 </span></a>
-            <div class="product-price">
-              <p>$9.99          </p>
-            </div>
+            <div class="product-price">$9.99          </div>
           </li>
         </ul>
       </div>
