--- a/test_6.html
+++ b/test_6.html
@@ -26,7 +26,7 @@
   <script src="https://code.jquery.com/jquery-1.12.3.min.js" integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ=" crossorigin="anonymous"></script>
   <script>if (!window.jQuery) { document.write('<script src="js/library/jquery-1.12.3.min.js"><\\/script>'); }</script>
 </head>
-<body onload="loadData();">
+<body>
   <div class="col-md-12"> 
     <section class="section header col-md-12"> 
       <div class="section-header"> 
@@ -61,23 +61,7 @@
         <h4>People Who Viewed This Item Also Viewed </h4>
       </div>
       <div class="section-content"> 
-        <ul>
-          <li><a href="#" target="_blank" class="thumbnail"> <img src="http://lorempixel.com/100/100/food/" alt="Image1" width="90" height="90"></a><a href="#" target="_blank" class="product-link"><span class="product-name">Product 1</span></a>
-            <div class="product-price">
-              <p>$19.99</p>
-            </div>
-          </li>
-          <li><a href="#" target="_blank" class="thumbnail"> <img src="http://lorempixel.com/100/100/food/" alt="Image2" width="90" height="90"></a><a href="#" target="_blank" class="product-link"><span class="product-name">Product 2</span></a>
-            <div class="product-price">
-              <p>$29.99</p>
-            </div>
-          </li>
-          <li><a href="#" target="_blank" class="thumbnail"> <img src="http://lorempixel.com/100/100/food/" alt="Image3" width="90" height="90"></a><a href="#" target="_blank" class="product-link"><span class="product-name">Product 3 </span></a>
-            <div class="product-price">
-              <p>$22.99      </p>
-            </div>
-          </li>
-        </ul>
+        <ul></ul>
       </div>
     </section>
   </div>
@@ -87,38 +71,7 @@
         <h4>People Who Bought This Item Also Bought </h4>
       </div>
       <div class="section-content"> 
-        <ul>
-          <li><a href="#" target="_blank" class="thumbnail"> <img src="http://lorempixel.com/100/100/food/" alt="Image1" width="90" height="90"></a><a href="#" target="_blank" class="product-link"><span class="product-name">Product 1</span></a>
-            <div class="product-price">
-              <p>$19.99</p>
-            </div>
-          </li>
-          <li><a href="#" target="_blank" class="thumbnail"> <img src="http://lorempixel.com/100/100/food/" alt="Image2" width="90" height="90"></a><a href="#" target="_blank" class="product-link"><span class="product-name">Product 2</span></a>
-            <div class="product-price">
-              <p>$29.99</p>
-            </div>
-          </li>
-          <li><a href="#" target="_blank" class="thumbnail"> <img src="http://lorempixel.com/100/100/food/" alt="Image3" width="90" height="90"></a><a href="#" target="_blank" class="product-link"><span class="product-name">Product 3 </span></a>
-            <div class="product-price">
-              <p>$22.99      </p>
-            </div>
-          </li>
-          <li><a href="#" target="_blank" class="thumbnail"> <img src="http://lorempixel.com/100/100/food/" alt="Image4" width="90" height="90"></a><a href="#" target="_blank" class="product-link"><span class="product-name">Product 4</span></a>
-            <div class="product-price">
-              <p>$32.99</p>
-            </div>
-          </li>
-          <li><a href="#" target="_blank" class="thumbnail"> <img src="http://lorempixel.com/100/100/food/" alt="Image5" width="90" height="90"></a><a href="#" target="_blank" class="product-link"><span class="product-name">Product 5</span></a>
-            <div class="product-price">
-              <p>$15.99</p>
-            </div>
-          </li>
-          <li><a href="#" target="_blank" class="thumbnail"> <img src="http://lorempixel.com/100/100/food/" alt="Image6" width="90" height="90"></a><a href="#" target="_blank" class="product-link"><span class="product-name">Product 6 </span></a>
-            <div class="product-price">
-              <p>$9.99          </p>
-            </div>
-          </li>
-        </ul>
+        <ul></ul>
       </div>
     </section>
     <section class="section footer col-md-12"> 
